Add gitleak to brewfile and pre-commit

--- a/home/Brewfile.tmpl
+++ b/home/Brewfile.tmpl
@@ -27,6 +27,7 @@ brew 'libpq'
 brew 'mysql@5.7', restart_service: true
 brew 'neofetch'
 brew 'postgresql@14', restart_service: true
+brew 'pre-commit'
 brew 'redis', restart_service: true
 brew 'ripgrep'
 brew 'thefuck'
