--- a/home/dot_zprofile.tmpl
+++ b/home/dot_zprofile.tmpl
@@ -1,4 +1,6 @@
 eval "$(/opt/homebrew/bin/brew shellenv)"
 
+{{- if lookPath "orbctl" }}
 # Added by OrbStack: command-line tools and integration
 source ~/.orbstack/shell/init.zsh 2>/dev/null || :
+{{ end }}
