--- a/home/dot_config/zsh/dot_zsh_tools.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_tools.zsh.tmpl
@@ -23,3 +23,7 @@ if type pipx &>/dev/null; then
 
   eval "$(register-python-argcomplete pipx)"
 fi
+
+# tabtab source for packages
+# uninstall by removing these lines
+[[ -f ~/.config/tabtab/zsh/__tabtab.zsh ]] && . ~/.config/tabtab/zsh/__tabtab.zsh || true
