--- a/home/.chezmoiscripts/darwin/run_after_sync-raycast-commands.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_after_sync-raycast-commands.sh.tmpl
@@ -15,6 +15,8 @@ set -eufo pipefail
 
   "conversions/change-case"
 
+  "system/audio"
+
   "web-searches/images"
 -}}
 
@@ -36,12 +38,12 @@ if [ ! -d {{ $destination | quote }} ]; then
     mkdir -p {{ $destination | quote }}
 fi
 cp -r {{ $source | quote }} {{ $destination | quote }}
-echo "Copied script command {{ . }}"
+echo "Copied raycast script command {{ . }}"
 {{ end -}}
 
 {{ range ($files | sortAlpha | uniq) -}}
 {{ $source := joinPath $raycastEndabledCommands . -}}
 {{ $destination := joinPath $raycastCommandsSource . -}}
 cp -r {{ $source | quote }} {{ $destination | quote }}
-echo "Copied script command {{ . }}"
+echo "Copied raycast script command {{ . }}"
 {{ end -}}
