--- a/home/.chezmoiscripts/darwin/run_after_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_after_install-packages.sh.tmpl
@@ -4,7 +4,7 @@ set -eufo pipefail
 
 {{ $packagesTimestampPath := joinPath .chezmoi.homeDir "chezmoi_install_packages_timestamp.txt" -}}
 {{ $brewfilePath := joinPath .chezmoi.homeDir "Brewfile" -}}
-{{ $toolVersionsPath := joinPath .chezmoi.homeDir -}}
+{{ $toolVersionsPath := joinPath .chezmoi.homeDir ".tool-versions" -}}
 {{ $fallbackDate := "1970-01-01T00:00:00+0000" -}}
 {{ $dateFormat := "%Y-%m-%dT%H:%M:%S%z" -}}
 
