chore: add wyse ssh key

--- a/home/private_dot_ssh/authorized_keys.tmpl
+++ b/home/private_dot_ssh/authorized_keys.tmpl
@@ -4,3 +4,6 @@
 {{ if .isWork -}}
 {{    onepasswordRead "op://Private/GitLab SSH key/public key" .opWorkAccount | trim }}
 {{ end -}}
+{{ if .isPersonal -}}
+{{    onepasswordRead "op://dev/WySe SSH key/public key" .opPersonalAccount | trim }}
+{{ end -}}
