--- a/home/private_dot_ssh/config.tmpl
+++ b/home/private_dot_ssh/config.tmpl
@@ -4,3 +4,11 @@ Include ~/.orbstack/ssh/config
 
 Host *
   IdentityAgent "~/.1password/agent.sock"
+
+{{ if .isPersonal -}}
+Host wyse
+  HostName {{ onepasswordRead "op://dev/WySe/hostname" .opPersonalAccount | trim }}
+  User {{ onepasswordRead "op://dev/WySe/username" .opPersonalAccount | trim }}
+  IdentityFile ~/.ssh/miszo_wyse.pub
+  IdentitiesOnly yes
+{{ end -}}
