--- a/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
@@ -1,8 +1,29 @@
+{{- $brewBundleTimestampPath := joinPath .chezmoi.homeDir ".config" "brew" "brew_bundle_timestamp.txt" -}}
+{{- $brewfilePath := joinPath .chezmoi.homeDir ".config" "brew" "Brewfile" -}}
+{{ $fallbackDate := "1970-01-01T00:00:00+0000" -}}
+{{ $dateFormat := "%Y-%m-%dT%H:%M:%S%z" -}}
+
+function get_current_date_utc() {
+  date -u +{{ $dateFormat | quote }}
+}
+
+function set_bundle_timestamp() {
+  echo "Setting current timestamp in {{ $brewBundleTimestampPath }}"
+  get_current_date_utc > {{ $brewBundleTimestampPath | quote }}
+}
+
+function brew_bundle() {
+  echo "Run brew bundle..."
+  brew bundle --no-lock --file={{ $brewfilePath }}
+  set_bundle_timestamp;
+}
+
 function brew_update {
     brew upgrade &&
     brew update &&
     brew cleanup &&
     asdf reshim
+
 }
 
 function miszo_git_local_config {
