Add Neovim config based on LazyVim

--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -24,19 +24,25 @@ brew 'glab'
 brew 'gnupg'
 brew 'graphviz'
 brew 'imagemagick'
+brew 'jesseduffield/lazydocker/lazydocker'
+brew 'jesseduffield/lazygit/lazygit'
 brew 'jq'
 brew 'libpq'
 brew 'mysql@5.7', restart_service: true
 brew 'neofetch'
+brew 'neovim'
 brew 'postgresql@14', restart_service: true
 brew 'pre-commit'
 brew 'redis', restart_service: true
 brew 'ripgrep'
 brew 'thefuck'
+brew 'trash'
 brew 'z'
 brew 'zlib'
 
 cask '1password-cli'
 cask 'calibre'
 cask 'docker'
+cask 'font-symbols-only-nerd-font'
+cask 'keycastr'
 cask 'orbstack'
