Update kitty and neovim configs

--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -23,9 +23,11 @@ brew 'glab'
 {{ end -}}
 brew 'gnupg'
 brew 'graphviz'
+brew 'httpie'
 brew 'imagemagick'
 brew 'jesseduffield/lazydocker/lazydocker'
 brew 'jesseduffield/lazygit/lazygit'
+brew 'jless'
 brew 'jq'
 brew 'libpq'
 brew 'mysql@5.7', restart_service: true
