feat: add brew languagetool service

--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -31,6 +31,7 @@ brew 'jesseduffield/lazydocker/lazydocker'
 brew 'jesseduffield/lazygit/lazygit'
 brew 'jless'
 brew 'jq'
+brew 'languagetool', restart_service: true
 brew 'libpq'
 brew 'mysql@5.7', restart_service: true
 brew 'neofetch'
