feat: add language tool support in the neovim

--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -8,6 +8,7 @@ tap 'homebrew/core'
 tap 'homebrew/services'
 
 brew 'act'
+brew 'actionlint'
 brew 'asdf'
 brew 'bat'
 brew 'bison'
@@ -31,7 +32,6 @@ brew 'jesseduffield/lazydocker/lazydocker'
 brew 'jesseduffield/lazygit/lazygit'
 brew 'jless'
 brew 'jq'
-brew 'languagetool', restart_service: true
 brew 'libpq'
 brew 'mysql@5.7', restart_service: true
 brew 'neofetch'
