--- a/home/.chezmoiscripts/darwin/run_after_create_links.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_after_create_links.sh.tmpl
@@ -2,10 +2,12 @@
 
 set -eufo pipefail
 
-{{ $dictionariesPath := join.path .chezmoi.homedir ".config" "spell" "dictionaries" -}}
-{{ $vsCodeLtexPath := join.path .chezmoi.homedir "Library" "Application Support" "Code" "User" "globalStorage" "valentjn.vscode-ltex" -}}
+{{ $dictionariesPath := joinPath .chezmoi.homeDir ".config" "spell" "dictionaries" -}}
+{{ $vsCodeLtexPath := joinPath .chezmoi.homeDir "Library" "Application\\ Support" "Code" "User" "globalStorage" "valentjn.vscode-ltex" -}}
 
 function main() {
+  echo "Deletig {{ $vsCodeLtexPath }}"
+  rm -rf {{ $vsCodeLtexPath }}
   echo "Creating symbolic link from {{ $dictionariesPath }} to {{ $vsCodeLtexPath }}"
   ln -s {{ $dictionariesPath }} {{ $vsCodeLtexPath }}
 }
