--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -14,6 +14,7 @@ brew 'bat'
 brew 'bison'
 brew 'cloc'
 brew 'exa'
+brew 'fastfetch'
 brew 'fd'
 brew 'ffmpeg'
 brew 'fx'
@@ -36,7 +37,6 @@ brew 'jless'
 brew 'jq'
 brew 'libpq'
 brew 'mysql@5.7', restart_service: true
-brew 'neofetch'
 brew 'neovim'
 brew 'postgresql@14', restart_service: true
 brew 'pre-commit'
