chore: remove unneeded taps and add tldr cli

--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -2,9 +2,7 @@
 
 tap '1password/tap'
 tap 'homebrew/bundle'
-tap 'homebrew/cask'
 tap 'homebrew/cask-fonts'
-tap 'homebrew/core'
 tap 'homebrew/services'
 
 brew 'act'
@@ -44,6 +42,7 @@ brew 'redis', restart_service: true
 brew 'ripgrep'
 brew 'thefuck'
 brew 'trash'
+brew 'tealdeer'
 brew 'z'
 brew 'zlib'
 
