feat: add better display tool

--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -47,6 +47,7 @@ brew 'z'
 brew 'zlib'
 
 cask '1password-cli'
+cask 'betterdisplay'
 cask 'calibre'
 cask 'docker'
 cask 'font-symbols-only-nerd-font'
