feat: add bluetility

--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -48,6 +48,7 @@ brew 'zlib'
 
 cask '1password-cli'
 cask 'betterdisplay'
+cask 'bluetility'
 cask 'calibre'
 cask 'docker'
 cask 'font-symbols-only-nerd-font'
