chore: add mc, tree, and  zoxide

--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -12,6 +12,7 @@ brew 'bat'
 brew 'bison'
 brew 'cloc'
 brew 'exa'
+brew 'entr'
 brew 'fastfetch'
 brew 'fd'
 brew 'ffmpeg'
@@ -36,6 +37,7 @@ brew 'jq'
 brew 'libpq'
 brew 'mysql@5.7', restart_service: true
 brew 'neovim'
+brew 'midnight-commander'
 brew 'postgresql@14', restart_service: true
 brew 'pre-commit'
 brew 'redis', restart_service: true
@@ -43,12 +45,11 @@ brew 'ripgrep'
 brew 'thefuck'
 brew 'trash'
 brew 'tealdeer'
-brew 'z'
 brew 'zlib'
+brew 'zoxide'
 
 cask '1password-cli'
 cask 'betterdisplay'
-cask 'bluetility'
 cask 'calibre'
 cask 'docker'
 cask 'font-symbols-only-nerd-font'
