chore: change theme and adjust config for kitty and neovim

--- a/home/dot_config/zsh/dot_zsh_work_functions.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_work_functions.zsh.tmpl
@@ -33,7 +33,7 @@ function web_husky_install {
 }
 
 function web_bundle_install {
-    echo "[web_bundle_install] bundle intall..."
+    echo "[web_bundle_install] bundle install..."
     bundle install
     echo "[web_bundle_install] done!"
 }
