--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -38,7 +38,6 @@ brew 'jq'
 brew 'libpq'
 brew 'mysql@5.7', restart_service: true
 brew 'neovim'
-brew 'midnight-commander'
 brew 'postgresql@14', restart_service: true
 brew 'pre-commit'
 brew 'redis', restart_service: true
@@ -48,6 +47,12 @@ brew 'trash'
 brew 'tealdeer'
 brew 'zlib'
 brew 'zoxide'
+
+# yazi
+brew 'yazi'
+brew 'ffmpegthumbnailer'
+brew 'unar'
+brew 'poppler'
 
 cask '1password-cli'
 cask 'betterdisplay'
