chore: change business vault name and move some files to 1password

--- a/home/dot_config/1Password/ssh/agent.toml.tmpl
+++ b/home/dot_config/1Password/ssh/agent.toml.tmpl
@@ -4,4 +4,4 @@ vault = "dev"
 
 [[ssh-keys]]
 account = {{ output (joinPath .chezmoi.workingTree "./scripts/get_op_account.sh") .opWorkAccount ".name" | trim }}
-vault = "Private"
+vault = "Employee"
