--- a/home/dot_config/brew/Brewfile.tmpl
+++ b/home/dot_config/brew/Brewfile.tmpl
@@ -1,63 +1,5 @@
-# frozen_string_literal: true
+{{ onepasswordRead "op://dev/Brewfile/notesPlain" .opPersonalAccount  }}
 
-tap '1password/tap'
-tap 'homebrew/bundle'
-tap 'homebrew/cask-fonts'
-tap 'homebrew/services'
-
-brew 'act'
-brew 'actionlint'
-brew 'asdf'
-brew 'bat'
-brew 'bison'
-brew 'bottom'
-brew 'cloc'
-brew 'eza'
-brew 'entr'
-brew 'fastfetch'
-brew 'fd'
-brew 'ffmpeg'
-brew 'fx'
-brew 'fzf'
-brew 'gh'
-brew 'git'
-brew 'gitleaks'
-brew 'git-delta'
 {{ if .isWork -}}
-brew 'glab'
-{{ end -}}
-brew 'gnupg'
-brew 'gnu-sed'
-brew 'graphviz'
-brew 'httpie'
-brew 'imagemagick'
-brew 'jesseduffield/lazydocker/lazydocker'
-brew 'jesseduffield/lazygit/lazygit'
-brew 'jless'
-brew 'jq'
-brew 'libpq'
-brew 'mysql@5.7', restart_service: true
-brew 'neovim'
-brew 'postgresql@14', restart_service: true
-brew 'pre-commit'
-brew 'redis', restart_service: true
-brew 'ripgrep'
-brew 'thefuck'
-brew 'trash'
-brew 'tealdeer'
-brew 'zlib'
-brew 'zoxide'
-
-# yazi
-brew 'yazi'
-brew 'ffmpegthumbnailer'
-brew 'unar'
-brew 'poppler'
-
-cask '1password-cli'
-cask 'betterdisplay'
-cask 'calibre'
-cask 'docker'
-cask 'font-symbols-only-nerd-font'
-cask 'keycastr'
-cask 'orbstack'
+{{ onepasswordRead "op://Employee/Brewfile/notesPlain" .opWorkAccount -}}
+{{- end -}}
