--- a/home/dot_config/git/config-work.tmpl
+++ b/home/dot_config/git/config-work.tmpl
@@ -1,3 +1,3 @@
 [user]
   email = {{ .workEmail }}
-  signingkey = {{ onepasswordRead "op://Private/Commit signing key/public key" .opWorkAccount | trim }}
+  signingkey = {{ onepasswordRead "op://Employee/Commit signing key/public key" .opWorkAccount | trim }}
