--- a/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_functions.zsh.tmpl
@@ -1,7 +1,7 @@
 {{- $brewBundleTimestampPath := joinPath .chezmoi.homeDir ".config" "brew" "brew_bundle_timestamp.txt" -}}
 {{- $brewfilePath := joinPath .chezmoi.homeDir ".config" "brew" "Brewfile" -}}
-{{ $fallbackDate := "1970-01-01T00:00:00+0000" -}}
-{{ $dateFormat := "%Y-%m-%dT%H:%M:%S%z" -}}
+{{- $fallbackDate := "1970-01-01T00:00:00+0000" -}}
+{{- $dateFormat := "%Y-%m-%dT%H:%M:%S%z" -}}
 
 function get_current_date_utc() {
   date -u +{{ $dateFormat | quote }}
