--- a/home/dot_config/private_op/private_plugins/private_glab.json.tmpl
+++ b/home/dot_config/private_op/private_plugins/private_glab.json.tmpl
@@ -1,5 +1,5 @@
 {
-	"account_id": {{ output (joinPath .chezmoi.workingTree "./scripts/get_op_account.sh") .opWorkAccount | trim }},
+	"account_id": {{ .glab.accountId }},
 	"entrypoint": [
 		"glab"
 	],
@@ -7,8 +7,8 @@
 		{
 			"plugin": "gitlab",
 			"credential_type": "personal_access_token",
-			"vault_id": {{ output (joinPath .chezmoi.workingTree "./scripts/get_op_vault.sh") "Employee" .opWorkAccount | trim }},
-			"item_id": {{ (onepassword "GitLab CLI token" "Employee" .opWorkAccount).id | quote }}
+			"vault_id": {{ .glab.vaultId | quote }},
+			"item_id": {{ .glab.itemId | quote }}
 		}
 	]
 }
