--- a/home/dot_config/zsh/dot_zsh_work_env.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_work_env.zsh.tmpl
@@ -1,1 +1,1 @@
-{{- onepasswordRead "op://Employee/Envs/notesPlain" .opWorkAccount -}}
+{{- onepasswordRead "op://Employee/Envs/notesPlain" .op.work.accountCode -}}
