--- a/home/dot_config/private_op/plugins.sh.tmpl
+++ b/home/dot_config/private_op/plugins.sh.tmpl
@@ -1,5 +1,5 @@
 export OP_PLUGIN_ALIASES_SOURCED=1
 alias gh="op plugin run -- gh"
-{{ if .isWork -}}
+{{ if .computer.isWork -}}
 alias glab="op plugin run -- glab"
 {{ end -}}
