--- a/home/dot_config/private_op/private_plugins/private_used_items/private_gh.json.tmpl
+++ b/home/dot_config/private_op/private_plugins/private_used_items/private_gh.json.tmpl
@@ -1,1 +1,1 @@
-[{"account_id":{{ output (joinPath .chezmoi.workingTree "./scripts/get_op_account.sh") .opPersonalAccount | trim }},"vault_id":{{ output (joinPath .chezmoi.workingTree "./scripts/get_op_vault.sh") "dev" .opPersonalAccount | trim }},"item_id":{{ (onepassword "GitHub CLI token" "dev" .opPersonalAccount).id | quote }}}]
+[{"account_id":{{ .gh.accountId | quote }},"vault_id":{{ .gh.vaultId | quote }},"item_id":{{ .gh.itemId | quote }}}]
