--- a/home/dot_config/private_op/private_plugins/private_used_items/private_glab.json.tmpl
+++ b/home/dot_config/private_op/private_plugins/private_used_items/private_glab.json.tmpl
@@ -1,1 +1,1 @@
-[{"account_id":{{ output (joinPath .chezmoi.workingTree "./scripts/get_op_account.sh") .opWorkAccount | trim }},"vault_id":{{ output (joinPath .chezmoi.workingTree "./scripts/get_op_vault.sh") "Employee" .opWorkAccount | trim }},"item_id":{{ (onepassword "GitLab CLI token" "Employee" .opWorkAccount).id | quote }}}]
+[{"account_id":{{ .glab.accountId | quote }},"vault_id":{{ .glab.vaultId | quote }},"item_id":{{ .glab.itemId | quote }}}]
