--- a/home/dot_config/zsh/dot_zsh_credentials.zsh.tmpl
+++ b/home/dot_config/zsh/dot_zsh_credentials.zsh.tmpl
@@ -1,3 +1,3 @@
-export CHEZMOI_GITHUB_ACCESS_TOKEN={{ onepasswordRead "op://dev/chezmoi GitHub API Token/token" .opPersonalAccount | trim }}
-export OCTO_GH_TOKEN={{ onepasswordRead "op://dev/GitHub CLI token/token" .opPersonalAccount | trim }}
+export CHEZMOI_GITHUB_ACCESS_TOKEN={{ .gh.chezmoiToken | trim }}
+export OCTO_GH_TOKEN={{ .gh.octoToken | trim }}
 
