--- a/home/dot_gemrc.tmpl
+++ b/home/dot_gemrc.tmpl
@@ -4,14 +4,14 @@
 :bulk_threshold: 1000
 :sources:
 - https://rubygems.org/
-- s3://{{ onepasswordRead "op://Employee/gemsrc/s3_source" .opWorkAccount | trim }}/
+- s3://{{ .gemrc.s3Source | trim }}/
 :update_sources: true
 :verbose: true
 s3_source: {
-  {{ onepasswordRead "op://Employee/gemsrc/s3_source" .opWorkAccount | trim }}: {
-    id: {{ onepasswordRead "op://Employee/gemsrc/username" .opWorkAccount | quote }},
-    secret: {{ onepasswordRead "op://Employee/gemsrc/credential" .opWorkAccount | quote }},
-    region: {{ onepasswordRead "op://Employee/gemsrc/region" .opWorkAccount | quote }},
-    endpoint: {{ onepasswordRead "op://Employee/gemsrc/endpoint" .opWorkAccount | quote }}
+  {{ .gemrc.s3Source | trim }}: {
+    id: {{ .gemrc.username | quote }},
+    secret: {{ .gemrc.secret | quote }},
+    region: {{ .gemrc.region | quote }},
+    endpoint: {{ .gemrc.endpoint | quote }}
   }
 }
