--- a/home/dot_config/git/config-work.tmpl
+++ b/home/dot_config/git/config-work.tmpl
@@ -1,3 +1,3 @@
 [user]
   email = {{ .git.work.email }}
-  signingkey = {{ .git.work.email | trim }}
+  signingkey = {{ .git.work.signingkey | trim }}
